--- a/index.html
+++ b/index.html
@@ -16,3 +16,31 @@ Vizitku ostyluj pomocí CSS:
 
 Tip: Webdesign In 4 Minutes https://jgthms.com/web-design-in-4-minutes/
 -->
+
+<!DOCTYPE html>
+<html lang="cz">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Vizitka Jana</title>
+    <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <head> 
+  <body>
+    <header id="header">  
+        <h1>Jana Holoubková</h1>
+    </header>
+    <main>
+      <p>Ahoj, ráda sportuji, zejména mám ráda outdoorové sporty. Po večerech tancuji salsu. </p>
+      <ul>  <li*3>
+    <ul>
+        <li><a href="mailto:j.holoubkova@seznam.cz">odkaz na mail</a></li>
+        <li><a href="http:////https://www.facebook.com/lenkarihova1987">odkaz na Facebook</a></li>
+        <li><address>Praha 7</address></a></li>
+    </ul>
+    <p><img src="http://placekitten.com/500/500" alt="Kotatko"> </p>
+    </main>
+</body>
+</html> 
+
